--- a/diycode-test/src/main/res/layout/activity_main.xml
+++ b/diycode-test/src/main/res/layout/activity_main.xml
@@ -14,36 +14,19 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   ~
-  ~ Last modified 2017-02-01 04:42:24
+  ~ Last modified 2017-02-10 01:22:50
   ~
   -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/content_main"
+    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/activity_main"
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:context="com.gcssloop.diycode.MainActivity"
-    tools:showIn="@layout/app_bar_main">
+    tools:context="com.gcssloop.diycode_test.MainActivity">
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <Button
-            android:id="@+id/login_right"
-            android:text="正确登录"
-            android:layout_width="match_parent"
-            android:layout_height="80dp" />
-
-        <Button
-            android:id="@+id/login_error"
-            android:text="错误登录"
-            android:layout_width="match_parent"
-            android:layout_height="80dp" />
-    </LinearLayout>
-
+    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+        android:text="Hello World!" />
 </RelativeLayout>
