--- a/diycode-test/src/main/res/values/colors.xml
+++ b/diycode-test/src/main/res/values/colors.xml
@@ -21,5 +21,5 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#DB3937</color>
 </resources>
