--- a/diycode-test/src/main/res/layout/activity_login_test.xml
+++ b/diycode-test/src/main/res/layout/activity_login_test.xml
@@ -71,11 +71,30 @@
             android:layout_weight="1"
             android:text="错误账号" />
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/logout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="账号登出" />
+
+        <Button
+            android:id="@+id/get_token"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="当前token" />
+    </LinearLayout>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="登录状态:"
+        android:text="状态信息:"
         android:textSize="18sp" />
 
     <TextView
