完善 getTopics 测试

--- a/diycode-test/src/main/res/layout/activity_topic_list_test.xml
+++ b/diycode-test/src/main/res/layout/activity_topic_list_test.xml
@@ -62,7 +62,7 @@
                         android:layout_height="36dp"
                         android:background="@null"
                         android:hint="type"
-                        android:inputType="text"
+                        android:inputType="number"
                         android:textSize="16sp" />
 
                     <View
