获取 topic 回复内容

--- a/diycode-test/src/main/res/layout/activity_topic_reply_test.xml
+++ b/diycode-test/src/main/res/layout/activity_topic_reply_test.xml
@@ -29,4 +29,33 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.gcssloop.diycode_test.test_api.TopicReplyTestActivity">
 
+    <LinearLayout
+        android:id="@+id/control"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/edit_id"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:inputType="number" />
+
+        <Button
+            android:id="@+id/btn_get_reply"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="获取回复" />
+    </LinearLayout>
+
+    <ListView
+        android:layout_below="@id/control"
+        android:id="@+id/list_topic_reply"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </ListView>
+
 </RelativeLayout>
