--- a/diycode-app/src/main/res/layout/content_main.xml
+++ b/diycode-app/src/main/res/layout/content_main.xml
@@ -18,32 +18,25 @@
   ~
   -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/content_main"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/content_main"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:context="com.gcssloop.diycode.MainActivity"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="com.gcssloop.diycode.activity.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/view_pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <Button
-            android:id="@+id/login_right"
-            android:text="正确登录"
-            android:layout_width="match_parent"
-            android:layout_height="80dp" />
-
-        <Button
-            android:id="@+id/login_error"
-            android:text="错误登录"
-            android:layout_width="match_parent"
-            android:layout_height="80dp" />
-    </LinearLayout>
+        android:layout_height="wrap_content"
+        />
 
 </RelativeLayout>
