--- a/diycode-app/src/main/res/layout/item_topic.xml
+++ b/diycode-app/src/main/res/layout/item_topic.xml
@@ -21,7 +21,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
