--- a/diycode-app/src/main/res/values/colors.xml
+++ b/diycode-app/src/main/res/values/colors.xml
@@ -26,4 +26,5 @@
     <color name="diy_gray">#C8C8CE</color>
     <color name="diy_gray2">#666666</color>
     <color name="diy_black">#222222</color>
+    <color name="diy_white">#ffffff</color>
 </resources>
