--- a/diycode-app/src/main/res/values/dimens.xml
+++ b/diycode-app/src/main/res/values/dimens.xml
@@ -25,4 +25,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="user_height">90dp</dimen>
 </resources>
