--- a/diycode-app/src/main/res/layout/activity_user.xml
+++ b/diycode-app/src/main/res/layout/activity_user.xml
@@ -54,12 +54,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <View
+        <android.support.v7.widget.CardView
             android:id="@+id/background"
             android:layout_width="match_parent"
             android:layout_height="240dp"
+            android:layout_margin="-10dp"
             android:background="@color/diy_white"
-            />
+            app:cardCornerRadius="0dp"
+            app:cardElevation="3dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
