--- a/diycode-app/src/main/res/layout/app_bar_main.xml
+++ b/diycode-app/src/main/res/layout/app_bar_main.xml
@@ -33,6 +33,7 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
+            app:layout_scrollFlags="scroll|enterAlways"
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
