--- a/diycode-app/src/main/res/layout/content_main.xml
+++ b/diycode-app/src/main/res/layout/content_main.xml
@@ -32,7 +32,6 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
+        android:layout_height="wrap_content"/>
 
 </RelativeLayout>
