--- a/diycode-app/src/main/res/layout/item_topic.xml
+++ b/diycode-app/src/main/res/layout/item_topic.xml
@@ -30,7 +30,8 @@
         android:layout_marginBottom="2dp"
         android:layout_marginTop="2dp"
         card_view:cardCornerRadius="5dp"
-        card_view:cardElevation="5dp">
+        card_view:cardElevation="5dp"
+        >
 
         <RelativeLayout
             android:layout_width="match_parent"
