--- a/diycode-app/src/main/res/layout/fragment_topic_list.xml
+++ b/diycode-app/src/main/res/layout/fragment_topic_list.xml
@@ -27,7 +27,7 @@
     android:orientation="vertical">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_topic_list"
+        android:id="@+id/topic_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
