--- a/diycode-app/src/main/res/layout/activity_user.xml
+++ b/diycode-app/src/main/res/layout/activity_user.xml
@@ -30,7 +30,8 @@
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/scroll_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/diy_white_bg">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -44,7 +45,8 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/topic_list"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:background="@color/diy_white_bg">
             </android.support.v7.widget.RecyclerView>
         </LinearLayout>
 
@@ -54,13 +56,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <android.support.v7.widget.CardView
+        <ImageView
+            android:src="@color/diy_white"
             android:id="@+id/background"
             android:layout_width="match_parent"
             android:layout_height="240dp"
-            android:background="@color/diy_white"
-            app:cardCornerRadius="0dp"
-            app:cardElevation="3dp"/>
+            android:background="@color/diy_black"
+            />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -85,13 +87,12 @@
                 android:text="diytest(测试账号)"
                 android:textSize="18sp"/>
 
-            <android.support.v7.widget.AppCompatButton
+            <Button
                 android:id="@+id/follow"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="16dp"
-                android:backgroundTint="@color/diy_red"
                 android:text="Follow"
                 android:textColor="@color/diy_white"/>
         </LinearLayout>
