--- a/diycode-app/src/main/res/values/colors.xml
+++ b/diycode-app/src/main/res/values/colors.xml
@@ -24,7 +24,8 @@
     <color name="colorAccent">#DB3937</color>
     <color name="diy_red">#DB3937</color>
     <color name="diy_gray">#C8C8CE</color>
-    <color name="diy_gray2">#666666</color>
-    <color name="diy_black">#222222</color>
+    <color name="diy_gray2">#999999</color>
+    <color name="diy_black">#4d4d4d</color>
     <color name="diy_white">#ffffff</color>
+    <color name="diy_white_bg">#F0F0F0</color>
 </resources>
