--- a/diycode-app/src/main/res/layout/item_topic.xml
+++ b/diycode-app/src/main/res/layout/item_topic.xml
@@ -41,51 +41,51 @@
 
         <ImageView
             android:id="@+id/avatar"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="@dimen/panel_space_1"
+            android:layout_height="@dimen/panel_space_1"
             tools:src="@mipmap/ic_launcher"/>
 
         <TextView
             android:id="@+id/username"
             android:layout_width="wrap_content"
-            android:layout_height="24dp"
+            android:layout_height="@dimen/panel_space_1"
             android:layout_marginLeft="8dp"
             android:layout_toRightOf="@+id/avatar"
             android:gravity="center_vertical"
-            android:textSize="12sp"
+            android:textSize="@dimen/panel_text_1"
             tools:text="diytest"/>
 
         <TextView
             android:id="@+id/point"
             android:layout_width="wrap_content"
-            android:layout_height="24dp"
+            android:layout_height="@dimen/panel_space_1"
             android:layout_marginLeft="8dp"
             android:layout_toRightOf="@+id/username"
             android:gravity="center_vertical"
             android:text="·"
             android:textColor="@color/diy_gray"
-            android:textSize="12sp"
+            android:textSize="@dimen/panel_text_1"
             android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/node_name"
             android:layout_width="wrap_content"
-            android:layout_height="24dp"
+            android:layout_height="@dimen/panel_space_1"
             android:layout_marginLeft="8dp"
             android:layout_toRightOf="@+id/point"
             android:gravity="center_vertical"
             android:textColor="@color/diy_gray"
-            android:textSize="12sp"
+            android:textSize="@dimen/panel_text_1"
             tools:text="Android"/>
 
         <TextView
             android:id="@+id/time"
             android:layout_width="wrap_content"
-            android:layout_height="30dp"
+            android:layout_height="@dimen/panel_space_1"
             android:layout_alignParentRight="true"
             android:gravity="center_vertical"
             android:textColor="@color/diy_gray"
-            android:textSize="13sp"
+            android:textSize="@dimen/panel_text_1"
             tools:text="1分钟前"/>
 
         <TextView
