--- a/diycode-app/src/main/res/values/dnimes-topic.xml
+++ b/diycode-app/src/main/res/values/dnimes-topic.xml
@@ -24,4 +24,9 @@
 <resources>
     <dimen name="topic_item_padding_vertical">12dp</dimen>
     <dimen name="topic_item_padding_horizontal">20dp</dimen>
+
+    <dimen name="panel_space_1">24dp</dimen>
+    <dimen name="panel_text_1">12sp</dimen>
+    <dimen name="panel_space_2">36dp</dimen>
+    <dimen name="panel_text_2">16dp</dimen>
 </resources>
